# Challenge

./: .gitignore  CMakeLists.txt
include/: insertion_sort.h  linked_list.h  list_queue.h  operations.h  stack.h
src/: insertion_sort.c  linked_list.c  list_queue.c  main.c  main.cpp  operations.c  stack.c
